--- a/src/MailLobbyer/wwwroot/index.html
+++ b/src/MailLobbyer/wwwroot/index.html
@@ -4,21 +4,46 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>MailLobbyer-Free</title>
+    <title>MailLobbyer</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="MailLobbyer.styles.css" rel="stylesheet" />
+
+    <style>
+        .loading-container {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+        }
+
+        .loading-image {
+            height: 200px;
+            width: 200px;
+        }
+
+        .loading-text {
+            font-size: 12px;
+            font-weight: bold;
+            color: rgb(0, 0, 0);
+        }
+        
+    </style>
 </head>
 
 <body>
     <div id="app">
-        <svg class="loading-progress">
-            <circle r="40%" cx="50%" cy="50%" />
-            <circle r="40%" cx="50%" cy="50%" />
-        </svg>
-        <div class="loading-progress-text"></div>
+        <div class="loading-container">
+            <img class="loading-image" src="favicon.svg" alt="Loading">
+            <div class="loading-text">
+                <p>MailLobbyer-Free</p>
+                <p>&copy; 2023 MailLobbyer. All rights reserved.</p>
+            </div>
+        </div>
+        
     </div>
 
     <div id="blazor-error-ui">
