--- a/src/MailLobbyer/wwwroot/index.html
+++ b/src/MailLobbyer/wwwroot/index.html
@@ -39,7 +39,8 @@
         <div class="loading-container">
             <img class="loading-image" src="favicon.svg" alt="Loading">
             <div class="loading-text">
-                <p>MailLobbyer-Free</p>
+                <p>MailLobbyer-Demo</p>
+                <p>This is based on an older version of MailLobbyer that runs in a sandboxed WASM app, it has no actual function and only serves as a demonstration</p>
                 <p>&copy; 2023 MailLobbyer. All rights reserved.</p>
             </div>
         </div>
